--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="BeautySales/assets/img/LogoBeautySales.png"
+      href="assets/img/LogoBeautySales.png"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,7 +27,7 @@
     >
       <div class="d-flex justify-content-center">
         <img
-          src="BeautySales/assets/img/login-icon.svg"
+          src="assets/img/login-icon.svg"
           alt="login-icon"
           style="height: 7rem"
         />
@@ -36,7 +36,7 @@
       <div class="input-group mt-4">
         <div style="background-color: #feb4a6" class="input-group-text">
           <img
-            src="BeautySales/assets/img/username-icon.svg"
+            src="assets/img/username-icon.svg"
             alt="username-icon"
             style="height: 1rem"
           />
@@ -50,7 +50,7 @@
       <div class="input-group mt-3">
         <div style="background-color: #feb4a6" class="input-group-text">
           <img
-            src="BeautySales/assets/img/password-icon.svg"
+            src="assets/img/password-icon.svg"
             alt="password-icon"
             style="height: 1rem"
           />
