--- a/assets/pages/EditarRoles.html
+++ b/assets/pages/EditarRoles.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="BeautySales/assets/img/LogoBeautySales.png"
+      href="assets/img/LogoBeautySales.png"
       type="image/x-icon"
     />
     <!-- Boxicons -->
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <!-- My CSS -->
-    <link rel="stylesheet" href="BeautySales/assets/css/EditarRoles.css" />
+    <link rel="stylesheet" href="assets/css/EditarRoles.css" />
 
     <title>Editar rol</title>
   </head>
@@ -22,7 +22,7 @@
     <!-- SIDEBAR -->
     <section id="sidebar">
 		<a href="Inicio.html" class="brand">
-		  <img src="BeautySales/assets/img/LogoBeautySales.png" class="img-principal" />
+		  <img src="assets/img/LogoBeautySales.png" class="img-principal" />
 		  <span class="text">Beauty Sales</span>
 		</a>
 		<ul class="side-menu top menu-horizontal">
@@ -122,7 +122,7 @@
 		  <input type="checkbox" id="switch-mode" hidden />
 		  <label for="switch-mode" class="switch-mode"></label>
 		  <a href="Perfil.html" class="profile">
-            <img src="BeautySales/assets/img/login-icon.svg" alt="" id="avatar-image-preview">
+            <img src="assets/img/login-icon.svg" alt="" id="avatar-image-preview">
         </a>
 		</nav>
   
@@ -189,7 +189,7 @@
 	
 	
 
-	<script src="BeautySales/assets/js/EditarRoles.js"></script>
-	<script src="BeautySales/assets/js/global.js"></script>
+	<script src="assets/js/EditarRoles.js"></script>
+	<script src="assets/js/global.js"></script>
 </body>
 </html>
