--- a/assets/pages/Perfil.html
+++ b/assets/pages/Perfil.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="BeautySales/assets/img/LogoBeautySales.png"
+      href="assets/img/LogoBeautySales.png"
       type="image/x-icon"
     />
     <!-- Boxicons -->
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <!-- My CSS -->
-    <link rel="stylesheet" href="BeautySales/assets/css/Perfil.css" />
+    <link rel="stylesheet" href="assets/css/Perfil.css" />
 
     <title>Perfil</title>
   </head>
@@ -22,7 +22,7 @@
     <!-- SIDEBAR -->
     <section id="sidebar">
       <a href="Inicio.html" class="brand">
-        <img src="BeautySales/assets/img/LogoBeautySales.png" class="img-principal" />
+        <img src="assets/img/LogoBeautySales.png" class="img-principal" />
         <span class="text">Beauty Sales</span>
       </a>
       <ul class="side-menu top menu-horizontal">
@@ -124,7 +124,7 @@
         <input type="checkbox" id="switch-mode" hidden />
         <label for="switch-mode" class="switch-mode"></label>
         <a href="Perfil.html" class="profile">
-            <img src="BeautySales/assets/img/login-icon.svg" alt="" id="avatar-image-preview">
+            <img src="assets/img/login-icon.svg" alt="" id="avatar-image-preview">
         </a>
       </nav>
 
@@ -134,7 +134,7 @@
             <div class="perfil-usuario-header">
                 <div class="perfil-usuario-portada">
                   <div class="perfil-usuario-avatar">
-                    <img src="BeautySales/assets/img/login-icon.svg" alt="" id="avatar-image">
+                    <img src="assets/img/login-icon.svg" alt="" id="avatar-image">
                     <button type="button" class="boton-avatar" id="avatar-button">
                       <i class="far fa-image"></i>
                     </button>
@@ -168,7 +168,7 @@
       </main>
     </section>
 
-    <script src="BeautySales/assets/js/Perfil.js"></script>
-    <script src="BeautySales/assets/js/global.js"></script>
+    <script src="assets/js/Perfil.js"></script>
+    <script src="assets/js/global.js"></script>
   </body>
 </html>
