--- a/assets/pages/RegistrarProveedores.html
+++ b/assets/pages/RegistrarProveedores.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="assets/img/LogoBeautySales.png"
+      href="/assets/img/LogoBeautySales.png"
       type="image/x-icon"
     />
     <!-- Boxicons -->
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <!-- My CSS -->
-    <link rel="stylesheet" href="assets/css/RegistrarProveedores.css" />
+    <link rel="stylesheet" href="/assets/css/RegistrarProveedores.css" />
 
     <title>Registrar Proveedor</title>
   </head>
@@ -22,7 +22,7 @@
     <!-- SIDEBAR -->
     <section id="sidebar">
       <a href="Inicio.html" class="brand">
-        <img src="assets/img/LogoBeautySales.png" class="img-principal" />
+        <img src="/assets/img/LogoBeautySales.png" class="img-principal" />
         <span class="text">Beauty Sales</span>
       </a>
       <ul class="side-menu top menu-horizontal">
@@ -124,7 +124,7 @@
         <input type="checkbox" id="switch-mode" hidden />
         <label for="switch-mode" class="switch-mode"></label>
         <a href="Perfil.html" class="profile">
-          <img src="assets/img/login-icon.svg" alt="" id="avatar-image-preview">
+          <img src="/assets/img/login-icon.svg" alt="" id="avatar-image-preview">
       </a>
       </nav>
 
@@ -182,7 +182,7 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.20/dist/sweetalert2.all.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-	<script src="assets/js/RegistrarProveedores.js"></script>
-  <script src="assets/js/global.js"></script>
+	<script src="/assets/js/RegistrarProveedores.js"></script>
+  <script src="/assets/js/global.js"></script>
 </body>
 </html>
