--- a/assets/pages/Proveedores.html
+++ b/assets/pages/Proveedores.html
@@ -338,7 +338,7 @@
 	
 	
 
-	<script src="/assets/js/proveedores.js"></script>
+	<script src="/assets/js/Proveedores.js"></script>
 	<script src="/assets/js/global.js"></script>
 </body>
 </html>
