--- a/assets/pages/Productos.html
+++ b/assets/pages/Productos.html
@@ -266,7 +266,7 @@
 	
 	
 
-	<script src="/assets/js/productos.js"></script>
+	<script src="/assets/js/Productos.js"></script>
 	<script src="/assets/js/global.js"></script>
 </body>
 </html>
