--- a/assets/pages/Perfil.html
+++ b/assets/pages/Perfil.html
@@ -8,12 +8,10 @@
       href="/assets/img/LogoBeautySales.png"
       type="image/x-icon"
     />
-    <!-- Boxicons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <!-- My CSS -->
     <link rel="stylesheet" href="/assets/css/Perfil.css" />
 
     <title>Perfil</title>
@@ -21,78 +19,78 @@
   <body>
     <!-- SIDEBAR -->
     <section id="sidebar">
-      <a href="Inicio.html" class="brand">
+      <a href="/Index.html" class="brand">
         <img src="/assets/img/LogoBeautySales.png" class="img-principal" />
         <span class="text">Beauty Sales</span>
       </a>
       <ul class="side-menu top menu-horizontal">
-        <li>
-          <a href="Inicio.html">
+        <li >
+          <a href="/Index.html">
             <i class="bx bx-home-alt-2"></i>
             <span class="text">Inicio</span>
           </a>
         </li>
         <li>
-          <a href="Productos.html">
+          <a href="" class="noDisponible">
             <i class="bx bx-basket"></i>
             <span class="text">Productos</span>
           </a>
         </li>
         <li>
-          <a href="Categorias.html">
+          <a href="" class="noDisponible">
             <i class="bx bx-category"></i>
             <span class="text">Categorias</span>
           </a>
         </li>
         <li class="menu-horizontal01">
           <a href="" id="miEnlace">
-            <i class='bx bx-trending-up'></i>
+            <i class="bx bx-trending-up"></i>
             <span class="text text01">Ventas</span>
-            <i class='bx bxs-chevron-down' ></i>
+            <i class="bx bxs-chevron-down"></i>
           </a>
           <ul class="menu-vertical">
             <li>
-              <a href="Facturacion.html">
-                <i class='bx bx-detail'></i>
+              <a href="" class="noDisponible">
+                <i class="bx bx-detail"></i>
                 <span class="text">Facturación</span>
               </a>
             </li>
             <li>
-              <a href="Ventas.html">
-                <i class='bx bx-bar-chart'></i>
+              <a href="" class="noDisponible">
+                <i class="bx bx-bar-chart"></i>
                 <span class="text">Registro de ventas</span>
               </a>
             </li>
           </ul>
         </li>
         <li>
-          <a href="Compras.html">
-            <i class='bx bx-trending-down'></i>
+          <a href="" class="noDisponible">
+            <i class="bx bx-trending-down"></i>
             <span class="text">Compras</span>
           </a>
         </li>
         <li>
-          <a href="Proveedores.html">
+          <a href="" class="noDisponible">
             <i class="bx bx-package"></i>
             <span class="text">Proveedores</span>
           </a>
         </li>
-        <li class="menu-horizontal02 active" >
+        <li class="menu-horizontal02">
           <a href="" id="miEnlace2">
             <i class="bx bxs-cog"></i>
             <span class="text text02">Configuración</span>
-            <i class='bx bxs-chevron-down'></i>
+            <i class="bx bxs-chevron-down"></i>
           </a>
           <ul class="menu-vertical">
             <li>
-              <a href="Usuarios.html">
+              <a href="/assets/pages/Usuarios.html">
                 <i class="bx bx-user"></i>
                 <span class="text">Usuarios</span>
               </a>
             </li>
             <li>
-              <a href="Roles.html">
-                <i class='bx bx-user-circle'></i>
+              <a href="/assets/pages/Roles.html">
+                <i class="bx bx-user-circle"></i>
                 <span class="text">Roles</span>
               </a>
             </li>
@@ -101,7 +99,7 @@
       </ul>
       <div class="side-menu">
         <li>
-          <a href="index.html" class="logout">
+          <a href="" class="logout" class="noDisponible">
             <i class="bx bxs-log-out-circle"></i>
             <span class="text">Cerrar sesión</span>
           </a>
@@ -153,9 +151,9 @@
                 <div class="perfil-usuario-footer ">
                     <ul class="lista-datos">
                         
-                        <li><i class="icono bx bx-user-circle"></i> Nombre: <input type="text" value="Maria Yolanda Orozco" id="editable" disabled ></li>
-                        <li><i class="icono bx bx-lock-alt"></i> Contraseña: <input type="password" value="1234567890" id="editable" disabled></li>
-                        <li><i class="icono bx bx-envelope"></i> Email: <input type="email" value="Yolanda@gmail.com" id="editable" disabled></li>
+                        <li><i class="icono bx bx-user-circle"></i> Nombre: <input type="text" value="Maria Yolanda Orozco"  disabled ></li>
+                        <li><i class="icono bx bx-lock-alt"></i> Contraseña: <input type="password" value="1234567890"  disabled></li>
+                        <li><i class="icono bx bx-envelope"></i> Email: <input type="email" value="Yolanda@gmail.com"  disabled></li>
                         <li><i class="icono bx bx-crown"></i> Rol: <input type="text" value="Administrador" disabled></li>
                     </ul>
                     
@@ -168,6 +166,7 @@
       </main>
     </section>
 
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/assets/js/Perfil.js"></script>
     <script src="/assets/js/global.js"></script>
   </body>
