--- a/assets/pages/RegistrarRoles.html
+++ b/assets/pages/RegistrarRoles.html
@@ -142,11 +142,17 @@
 				</div>
 			  </div>
         
-          <form class="table-data">
+          <form class="table-data" id="miFormulario">
             <div class="order">
                 <div class="container">
-                    <label for="roleName">Nombre del rol:</label>
-                    <input type="text" id="roleName" name="roleName" >
+					<div class="container3">
+						<label for="idd">Id:</label>
+                    	<input type="text" id="idd">
+					</div>
+                    <div class="container3">
+						<label for="roleName">Nombre del rol:</label>
+                    <input type="text" id="roleName">
+					</div>
                 </div>
                 <h4>Modulos:</h4>
                 <div class="container2">
