--- a/assets/pages/RegistrarUsuarios.html
+++ b/assets/pages/RegistrarUsuarios.html
@@ -146,34 +146,40 @@
         <div class="order">
             <div class="container">
                 <div class="container2">
-                    <div class="container3">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" id="nombre">
+					<div class="container3">
+                        <label for="nombre">Id</label>
+                        <input type="text" id="id" >
                     </div>
                     <div class="container3">
-                        <label for="correo">Correo</label>
-                        <input type="email" id="correo">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" id="nombre" >
                     </div>
                 </div>
                 <div class="container2">
+					<div class="container3">
+                        <label for="correo">Correo</label>
+                        <input type="email" id="correo" >
+                    </div>
                     <div class="container3">
                         <label for="contraseña">Contraseña</label>
-                        <input type="password" id="contraseña">
-                    </div>
-                    <div class="container3">
-                        <label for="fecha">Fecha</label>
-                        <input type="text" id="fecha" disabled>
+                        <input type="password" id="contraseña" >
                     </div>
                 </div>
-                <div class="container4">
+                <div class="container2">
+					<div class="container3">
+                        <label for="fecha">Fecha</label>
+                        <input type="text" id="fecha" disabled>
+					</div>
+					<div class="container3">
                     <label for="rol">Rol</label>
-                    <select id="rol">
+                    <select id="rol" >
                         <option value="">Elegir rol...</option>
                         <option value="Administrador">Administrador</option>
                         <option value="Sub-Admin">Sub-Admin</option>
                         <option value="Empleado">Empleado</option>
                         <option value="Empleado 2">Empleado 2</option>
                     </select>
+				</div>
                 </div>
                 <div class="container3">
                     <button type="submit">Guardar</button>
