--- a/assets/pages/Usuarios.html
+++ b/assets/pages/Usuarios.html
@@ -15,7 +15,6 @@
     />
     <!-- My CSS -->
     <link rel="stylesheet" href="/assets/css/Usuarios.css" />
-
     <title>Usuarios</title>
   </head>
   <body>
@@ -154,79 +153,10 @@
                     <th>Contraseña</th>
                     <th>Fecha de creación</th>
                     <th>Rol</th>
-                    <th>Estado</th>
                     <th>Acciones</th>
                   </tr>
                 </thead>
-                <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>Santiago</td>
-                    <td>Santiago@gmail.com</td>
-                    <td>12345</td>
-                    <td>04/09/2023</td>
-                    <td>Administrador</td>
-                    <td>
-                      <div class="switch">
-                        <input type="checkbox" class="toggleSwitch" id="toggleSwitch1">
-                        <label class="toggleLabel" for="toggleSwitch1"></label>
-                      </div>
-                    </td>
-                    <td>
-                      <a href="EditarUsuarios.html"><button class="edit-button"><i class='bx bxs-edit-alt'></i></button></a>
-                       </td>
-                  </tr>
-                  <tr>
-                    <td>2</td>
-                    <td>David</td>
-                    <td>Daguff@gmail.com</td>
-                    <td>12345</td>
-                    <td>04/09/2023</td>
-                    <td>Sub-Administrador</td>
-                    <td>
-                      <div class="switch">
-                        <input type="checkbox" class="toggleSwitch" id="toggleSwitch2">
-                        <label class="toggleLabel" for="toggleSwitch2"></label>
-                      </div>
-                    </td>
-                    <td>             
-                      <a href="EditarUsuarios.html"><button class="edit-button"><i class='bx bxs-edit-alt'></i></button></a>
-                       </td>
-                  </tr>
-                  <tr>
-                    <td>3</td>
-                    <td>Carlos</td>
-                    <td>Carlinux@gmail.com</td>
-                    <td>12345</td>
-                    <td>04/09/2023</td>
-                    <td>Empleado</td>
-                    <td>
-                      <div class="switch">
-                        <input type="checkbox" class="toggleSwitch" id="toggleSwitch3">
-                        <label class="toggleLabel" for="toggleSwitch3"></label>
-                      </div>
-                    </td>
-                    <td>
-                      <a href="EditarUsuarios.html"><button class="edit-button"><i class='bx bxs-edit-alt'></i></button></a>
-                       </td>
-                  </tr>
-                  <tr>
-                    <td>4</td>
-                    <td>Alexa</td>
-                    <td>Alexa@gmail.com</td>
-                    <td>12345</td>
-                    <td>04/09/2023</td>
-                    <td>Empleado 2</td>
-                    <td>
-                      <div class="switch">
-                        <input type="checkbox" class="toggleSwitch" id="toggleSwitch4">
-                        <label class="toggleLabel" for="toggleSwitch4"></label>
-                      </div>
-                    </td>
-                    <td>
-                      <a href="EditarUsuarios.html"><button class="edit-button"><i class='bx bxs-edit-alt'></i></button></a>
-                       </td>
-                  </tr>
+                <tbody id="table-data">
                 </tbody>
               </table>
             </div> 
@@ -234,7 +164,6 @@
 				
 		</main>
 	</section>
-	
 	
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
