--- a/assets/pages/EditarRoles.html
+++ b/assets/pages/EditarRoles.html
@@ -186,7 +186,7 @@
 						</div>
 					</div>
 					<div class="container3">
-						<button type="submit" id="crearRol">Crear</button>
+						<button type="submit" id="crearRol">Guardar</button>
 					</div>
 				</div> 
 				</form> 
